--- a/simple-express/views/about.pug
+++ b/simple-express/views/about.pug
@@ -1,5 +1,8 @@
 extends _layouts/master
 
-
 block content 
-  h1 這是關於我們
+  h1 這是頑童你知道的
+  h2 I Believe I Can Keep My Head Up 
+  h2 Don't Ever Lose Your Faith 
+  h2 I Believe I Can Keep My Head Up 
+  h2 Swing Your Wings Fly Away
