--- a/simple-express/views/_layouts/master.pug
+++ b/simple-express/views/_layouts/master.pug
@@ -3,6 +3,10 @@ html
   head 
    title MFEE 16 Express 練習
    meta(charset="utf-8")
+   link(rel='stylesheet' href='/public/style/main.css')
+   script(src="https://code.jquery.com/jquery-3.6.0.min.js")
+
+   block scripts 
 
 body 
   include header  
